[ipynb readme] bootstrap markdown update

--- a/1 Introduction to HTML.ipynb
+++ b/1 Introduction to HTML.ipynb
@@ -14,6 +14,9 @@
    "metadata": {},
    "source": [
     "# HTML: HyperText Markup Language\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the meaning and structure of web content. Other technologies besides HTML are generally used to describe a web page's appearance/presentation CSS or functionality/behavior JavaScript.\n",
     "\n",
