--- a/11 HTML Input Types.ipynb
+++ b/11 HTML Input Types.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "# HTML Input Types\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "Input types are used to create interactive web forms and can include text fields, checkboxes, radio buttons, sliders, date/time pickers, range inputs, and more. Input types provide the necessary structure for collecting data so it can be used by the webpage or sent to a server for processing\n",
     "\n",
