--- a/12 Other Form Tags.ipynb
+++ b/12 Other Form Tags.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "# Other Form Tags\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "As we are familiar with all the basic form tags, now we also have some tags that you may not see till now. they are fieldset, legend, progress, meter.\n",
     "they are some tags which you can use to avoid writing some CSS.\n",
