--- a/13 HTML Layout Tags.ipynb
+++ b/13 HTML Layout Tags.ipynb
@@ -13,6 +13,9 @@
    "metadata": {},
    "source": [
     "# HTML Layout\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "HTML has several semantic elements that define the different parts of a web page:\n",
     "\n",
