--- a/14 Other HTML Tags.ipynb
+++ b/14 Other HTML Tags.ipynb
@@ -14,6 +14,9 @@
    "metadata": {},
    "source": [
     "# Other HTML Tags\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "There is Nothing left in HTML, But lets talk about some other HTML Tags that are not widely used but you need to know as a Developer. \n",
     "The main motive to use these tags are Scrapping, using these tags in HTML Allow developers to scrap data based on tags.\n",
