--- a/15 Depre-cated Tags.ipynb
+++ b/15 Depre-cated Tags.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "# Deprecated / Not Used Tags\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "- Deprecated: This feature is no longer recommended. Though some browsers might still support it, it may have already been removed from the relevant web standards, may be in the process of being dropped, or may only be kept for compatibility purposes. Avoid using it, and update existing code if possible; see the compatibility table at the bottom of this page to guide your decision. Be aware that this feature may cease to work at any time.\n",
     "\n",
