--- a/2 HTML Text Fundamental.ipynb
+++ b/2 HTML Text Fundamental.ipynb
@@ -20,6 +20,9 @@
    "metadata": {},
    "source": [
     "# HTML text fundamentals\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "One of HTML's main jobs is to give text structure so that a browser can display an HTML document the way its developer intends.\n",
     "\n",
