--- a/4 Image Tag Documents.ipynb
+++ b/4 Image Tag Documents.ipynb
@@ -13,6 +13,9 @@
    "metadata": {},
    "source": [
     "# The Image Embed element\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "As the enhancement in technology increase, new frameworks and library are there. With this development, the quality of websites and web pages for end-user matter. and when I say quality means user interface as well as user experience.\n",
     "\n",
