--- a/6 Audio Tag.ipynb
+++ b/6 Audio Tag.ipynb
@@ -16,6 +16,9 @@
    "metadata": {},
    "source": [
     "# The Embed Audio element\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "The `<audio>` HTML element is used to embed sound content in documents. It may contain one or more audio sources, represented using the src attribute or the `<source>` element: the browser will choose the most suitable one. It can also be the destination for streamed media, using a MediaStream.\n",
     "\n",
