--- a/8 Lists in HTML.ipynb
+++ b/8 Lists in HTML.ipynb
@@ -10,6 +10,9 @@
    "metadata": {},
    "source": [
     "# HTML Lists\n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "Imagine you're creating an article with a list of recommendations or a web page with a menu of options. How do you structure this information to make it visually appealing and easy to navigate?\n",
     "\n",
