--- a/9 HTML Table.ipynb
+++ b/9 HTML Table.ipynb
@@ -19,6 +19,9 @@
    "metadata": {},
    "source": [
     "# HTML Tables \n",
+    "<!-- Boostrap Markdown File -->\n",
+    "<link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" rel=\"stylesheet\" />\n",
+    "<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js\"></script>\n",
     "\n",
     "## What is Table ?\n",
     "\n",
